# Bettertricks

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: app.tsx  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: common.tsx  dialogs.tsx  sidebar.tsx
apps/desktop/src/lib/: api.ts  format.ts  i18n.tsx  mock.ts  translations.ts
apps/desktop/src/lib/locales/: ar.json  de.json  es.json  fr.json  it.json  ja.json  ko.json  ru.json  tr.json  zh.json
apps/desktop/src/test/: app.test.tsx  format.test.ts  i18n.test.tsx
apps/desktop/src/views/: activity-view.tsx  catalog-view.tsx  prefix-view.tsx  settings-view.tsx
catalog/: manifest.json
catalog/native/dlls/: directx9.toml
catalog/native/fonts/: andale.toml  arial.toml  baekmuk.toml  calibri.toml  cambria.toml  candara.toml  cjkfonts.toml  comicsans.toml  consolas.toml  constantia.toml  corbel.toml  corefonts.toml  courier.toml  droid.toml  eufonts.toml  fakechinese.toml  fakejapanese.toml  fakejapanese_ipamona.toml  fakejapanese_vlgothic.toml  fakekorean.toml  georgia.toml  impact.toml  ipamona.toml  liberation.toml  lucida.toml  meiryo.toml  opensymbol.toml  pptfonts.toml  sourcehansans.toml  tahoma.toml  takao.toml  times.toml  trebuchet.toml  uff.toml  unifont.toml  verdana.toml  vlgothic.toml  webdings.toml  wenquanyi.toml  wenquanyizenhei.toml
catalog/native/settings/: alldlls=builtin.toml  alldlls=default.toml  autostart_winedbg=disabled.toml  autostart_winedbg=enabled.toml  bad.toml  cfc=disabled.toml  cfc=enabled.toml  csmt=force.toml  csmt=off.toml  csmt=on.toml  fontfix.toml  fontsmooth=bgr.toml  fontsmooth=disable.toml  fontsmooth=gray.toml  fontsmooth=rgb.toml  forcemono.toml  good.toml  grabfullscreen=n.toml  grabfullscreen=y.toml  graphics=default.toml  graphics=mac.toml  graphics=wayland.toml  graphics=x11.toml  gsm=0.toml  gsm=1.toml  gsm=2.toml  gsm=3.toml  heapcheck.toml  hidewineexports=disable.toml  hidewineexports=enable.toml  hosts.toml  isolate_home.toml  mackeyremap=both.toml  mackeyremap=left.toml  mackeyremap=none.toml  mimeassoc=off.toml  mimeassoc=on.toml  mwo=disable.toml  mwo=enabled.toml  mwo=force.toml  (+78 more)
crates/bettertricks-catalog-tool/: Cargo.toml
crates/bettertricks-catalog-tool/src/: main.rs
crates/bettertricks-cli/: Cargo.toml
crates/bettertricks-cli/src/: main.rs
crates/bettertricks-core/: Cargo.toml
crates/bettertricks-core/src/: catalog.rs  catalog_update.rs  domain.rs  error.rs  legacy.rs  lib.rs  operation.rs  paths.rs  planner.rs  prefix.rs  recovery.rs  store.rs  system.rs
docs/: accessibility.md  architecture.md  development.md  parity.md  release.md
packaging/linux/: io.bettertricks.desktop.desktop  io.bettertricks.desktop.metainfo.xml
scripts/: accessibility-regressions.test.mjs  catalog-generation.test.mjs  catalog-metadata.mjs  catalog-metadata.test.mjs  generate-catalog.mjs  generate-native-fonts.mjs  generate-native-settings.mjs  native-fonts.test.mjs  smoke-accessibility-bridge.py  smoke-clean-linux-packages.sh  smoke-linux-packages.sh  smoke-managed-host.sh  smoke-proton-settings.sh  smoke-signed-catalog.sh  smoke-wine-settings.sh  ui-regressions.test.mjs  upstream-parity.test.mjs  write-release-checksums.sh
