[workspace]
resolver = "2"
members = [
  "crates/bettertricks-core",
  "crates/bettertricks-cli",
  "crates/bettertricks-catalog-tool",
  "apps/desktop/src-tauri",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "LGPL-2.1-or-later"
repository = "https://github.com/RamazanBerk20/Bettertricks"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures-util = "0.3.31"
glob = "0.3.3"
hex = "0.4.3"
libc = "0.2.188"
parking_lot = "0.12.5"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "stream", "socks", "json"] }
rusqlite = { version = "0.40.0", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
shell-words = "1.1.1"
tar = "0.4.44"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v4", "v5"] }
walkdir = "2.5.0"
zstd = "0.13.3"
