[package]
name = "bettertricks-catalog-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "bettertricks-catalog"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bettertricks-core = { path = "../bettertricks-core" }
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
url.workspace = true
walkdir.workspace = true
zstd.workspace = true
