[package]
name = "bettertricks"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bettertricks"
path = "src/main.rs"

[dependencies]
bettertricks-core = { path = "../bettertricks-core" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
