[package]
name = "bettertricks-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
glob.workspace = true
hex.workspace = true
libc.workspace = true
parking_lot.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shell-words.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
