[package]
name = "bettertricks-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "bettertricks_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
bettertricks-core = { path = "../../../crates/bettertricks-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true
